--- a/css/styles.css
+++ b/css/styles.css
@@ -74,23 +74,23 @@ p{
     text-align: auto;
 }
 
-.html-skill-icon{
-    /* float: left; */
-    /* margin-right: 30px; */
+/* .html-skill-icon{
+    float: left;
+    margin-right: 30px;
 }
 
 .html-paragragh{
-    /* clear: right; */
+    clear: right;
 }
 
 .css-skill-icon{
-    /* float: left; */
-    /* margin-right: 30px; */
+    float: left;
+    margin-right: 30px;
 }
 
 .css-paragragh{
-    /* clear: right; */
-}
+    clear: right;
+} */
 
 .contact-me{
     width: 50%;
